[package]
name = "astrustpy"
version = "0.1.0"
authors = ["Tom Robitaille", "Erik Tollerud"]
edition = "2018"

[dependencies]
kuchiki = "0.8.0"
pyo3 = { version = "0.19.2", features = ["extension-module"] }
tendril = "0.4.3"
numpy = "0.19"

[lib]
name = "rust_stats"
crate-type = ["cdylib"]
path = "rust/lib.rs"

# the codegen-units=1 is critical for the fastest outcome
# I think that's because it does inlining of the memory-access?
[profile.release]
codegen-units = 1